# docs/swagger.json
@@ -46,6 +46,17 @@
                     "application/json"
                 ],
                 "summary": "Create user",
+                "parameters": [
+                    {
+                        "description": "Person Data",
+                        "name": "persondata",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "ok",
@@ -56,9 +67,9 @@
                 }
             }
         },
-        "/users/{some_id}": {
+        "/users/{email}": {
             "get": {
-                "description": "this to get a user by msisdn",
+                "description": "this to get a user by email",
                 "consumes": [
                     "application/json"
                 ],
@@ -70,7 +81,7 @@
                     {
                         "type": "string",
                         "description": "Some ID",
-                        "name": "some_id",
+                        "name": "email",
                         "in": "path",
                         "required": true
                     }
@@ -85,7 +96,7 @@
                 }
             },
             "delete": {
-                "description": "this to delete a user by msisdn",
+                "description": "this to delete a user by email",
                 "consumes": [
                     "application/json"
                 ],
@@ -97,7 +108,7 @@
                     {
                         "type": "string",
                         "description": "Some ID",
-                        "name": "some_id",
+                        "name": "email",
                         "in": "path",
                         "required": true
                     }
@@ -112,7 +123,7 @@
                 }
             },
             "patch": {
-                "description": "this to update a user by msisdn",
+                "description": "this to update a user by email",
                 "consumes": [
                     "application/json"
                 ],
@@ -124,7 +135,7 @@
                     {
                         "type": "string",
                         "description": "Some ID",
-                        "name": "some_id",
+                        "name": "email",
                         "in": "path",
                         "required": true
                     }
